# flaskBoiler

./: .sample_env  config.py  main.py  pyproject.toml
src/: __init__.py  database.py  models.py  routes.py  views.py
src/routes/: home.py
